added website icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Franklin Tian Portfolio V2</title>
+    <title>Franklin Tian | Portfolio V2</title>
+    <link rel="icon" href="/img/icon.png">
 
     <!--Bootstrap css file -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -102,7 +103,7 @@
             <section class="animated intro-area" id="introId">
                 <div class="container-fluid">
                     <div class="row">
-                        <h2 class="intro-title">Introduction</h2>
+                        <h2 class="intro-title">Introduction</h2> 
                     </div>
                     <div class="row">
                         <h5 class="intro-paragraph"> I am currently a McMaster University student in the Software
