--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <a class="nav-link" href="#interestsId">Interests</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#footerId">Contact</a>
+                                <a class="nav-link" href="#footerId">Contact Me</a>
                             </li>
                         </ul>
                     </div>
